src/mainPage/styles/imageBanner.scss
@import "react-slideshow-image/dist/styles.css";

.each-slide {
    div {
        background-size:cover;
        height: 60vh;
        width:100vw;
    }
}

.imageBanner-container {
    z-index: -10;
}

.imageBanner-text-banner {
    z-index: -1;
    position: absolute;
    background-color: black;
    color: white;
    opacity: .7;
    width: 100%;
    height: 2.5em;
}

.imageBanner-text-banner {
    display: flex;
    justify-content: center;
    align-items: center;
}

.image-slider {
    height: 60vh;
    z-index: -10
}

